# link-checker

./: .travis.yml  Cargo.toml  LICENSE  Readme.md
src/: errors.rs  links.rs  lint.rs  main.rs
tests/: cli.rs
tests/fixtures/: fail.html  pass.html
