[package]
authors = ["Pascal Hertleif <killercup@gmail.com>"]
name = "anchor-link-checker"
version = "0.1.0"

[dependencies]
quick-error = "0.1.4"
regex = "0.1.41"

[dependencies.clippy]
optional = true
version = "0.0.25"

[dev-dependencies]
assert_cli = "0.2.0"

[features]
default = []
dev = ["clippy"]
