[package]
authors = ["Pascal Hertleif <killercup@gmail.com>"]
license = "MIT"
name = "link-checker"
readme = "README.md"
version = "0.1.0"

[dependencies]
html5ever = "0.2.11"
hyper = "0.7.1"
quick-error = "0.1.4"
tendril = "0.1.6"

[dependencies.clippy]
optional = true
version = "0.0.33"

[dev-dependencies]
assert_cli = "0.2.0"

[features]
default = []
dev = ["clippy"]
